[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/characters/blue_slime.png" type="Texture" id=1]
[ext_resource path="res://scripts/Slime.gd" type="Script" id=2]
[ext_resource path="res://assets/effect/MainLight.tscn" type="PackedScene" id=3]
[ext_resource path="res://sounds/sfx/enemy_kill.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/sfx/hit.wav" type="AudioStream" id=5]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MainLight:energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31, 32 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MainLight:energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=5]
resource_name = "walk"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10, 11, 12 ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 4.5, 3 )

[sub_resource type="CircleShape2D" id=6]
radius = 86.0058

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 10, 9 )

[sub_resource type="CapsuleShape2D" id=9]
radius = 6.0
height = 0.0

[node name="Slime" type="KinematicBody2D" groups=["enemy"]]
script = ExtResource( 2 )

[node name="MainLight" parent="." groups=["enemy"] instance=ExtResource( 3 )]
shadow_enabled = false

[node name="Animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/dead = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/walk = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 7
vframes = 5

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 5 )
shape = SubResource( 8 )

[node name="DetectionArea" type="Area2D" parent="."]
visible = false

[node name="Collision" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 6 )

[node name="CollisionArea" type="Area2D" parent="."]
visible = false

[node name="Collision" type="CollisionShape2D" parent="CollisionArea"]
position = Vector2( 0, 1 )
shape = SubResource( 7 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 2

[node name="Collision" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 0, 2 )
shape = SubResource( 9 )

[node name="dead" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="animation_finished" from="Animation" to="." method="_on_animation_finished"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_body_exited"]
[connection signal="area_entered" from="CollisionArea" to="." method="kill"]
[connection signal="area_entered" from="HurtBox" to="." method="on_knockback"]
